SONARIAC-3007: Use rule description context in multi-tool rule checks (#1101)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Marcin Stachniuk <marcin.stachniuk@sonarsource.com>
GitOrigin-RevId: 2e7a0522c8a99e0a03a19da4c2ceba0f682f28ec